// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextArea /> default should render TextArea with default props 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hrYFpH"
  >
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hHzdeI"
    >
      <div
        class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 fsyzhh"
      >
        <div
          class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InteractionContainer-th1lpa-3 lgHHqS"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 TextInputweb__FillContainer-th1lpa-2 gwRKpx Spaceweb__Space-sc-1gh69p2-0 gseDFa Sizeweb__Size-t4oux4-0 jMNahJ"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 Labelweb__FloatView-sc-164wi1o-0 fRrBNK Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
            >
              <label
                class="Textweb__Text-dvo2dp-0 Labelweb__StyledText-sc-164wi1o-1 fSAEiu"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="medium"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InputContainer-th1lpa-0 cXrEYp Sizeweb__Size-t4oux4-0 cTcGbL Flexweb__Flex-h5ddrw-0 bXkbdN"
            >
              <textarea
                class="TextInputweb__StyledInput-th1lpa-1 jYgNJX Sizeweb__Size-t4oux4-0 fitCCE Spaceweb__Space-sc-1gh69p2-0 elJMNa Flexweb__Flex-h5ddrw-0 cndXnK"
                data-testid="ds-text-area"
                placeholder=""
                rows="1"
                style="height: 0px;"
                type="text"
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1i53gcl-0 Lineweb__Line-msfe36-0 dLqxdC"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> disabled should render a disabled TextArea 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hrYFpH"
  >
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hHzdeI"
    >
      <div
        class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 fsyzhh"
      >
        <div
          class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InteractionContainer-th1lpa-3 kHRfEF"
          disabled=""
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 TextInputweb__FillContainer-th1lpa-2 gwRKpx Spaceweb__Space-sc-1gh69p2-0 gseDFa Sizeweb__Size-t4oux4-0 jMNahJ"
            disabled=""
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 Labelweb__FloatView-sc-164wi1o-0 fRrBNK Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
            >
              <label
                class="Textweb__Text-dvo2dp-0 Labelweb__StyledText-sc-164wi1o-1 fkXLa-d"
                color="shade.980"
                data-testid="ds-text"
                disabled=""
                for="sample-id"
                value=""
                width="medium"
              >
                Sample Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InputContainer-th1lpa-0 cXrEYp Sizeweb__Size-t4oux4-0 cTcGbL Flexweb__Flex-h5ddrw-0 bXkbdN"
            >
              <textarea
                class="TextInputweb__StyledInput-th1lpa-1 UVPts Sizeweb__Size-t4oux4-0 fitCCE Spaceweb__Space-sc-1gh69p2-0 elJMNa Flexweb__Flex-h5ddrw-0 cndXnK"
                data-testid="ds-text-area"
                disabled=""
                id="sample-id"
                placeholder=""
                rows="1"
                style="height: 0px;"
                type="text"
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1i53gcl-0 Lineweb__Line-msfe36-0 dLqxdC"
            disabled=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> errorText should render TextArea with help text if errorText is provided as prop 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hrYFpH"
  >
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hHzdeI"
    >
      <div
        class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 fsyzhh"
      >
        <div
          class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InteractionContainer-th1lpa-3 jZIJQj"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 TextInputweb__FillContainer-th1lpa-2 gwRKpx Spaceweb__Space-sc-1gh69p2-0 gseDFa Sizeweb__Size-t4oux4-0 jMNahJ"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 Labelweb__FloatView-sc-164wi1o-0 fRrBNK Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
            >
              <label
                class="Textweb__Text-dvo2dp-0 Labelweb__StyledText-sc-164wi1o-1 fSAEiu"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="medium"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InputContainer-th1lpa-0 cXrEYp Sizeweb__Size-t4oux4-0 cTcGbL Flexweb__Flex-h5ddrw-0 bXkbdN"
            >
              <textarea
                class="TextInputweb__StyledInput-th1lpa-1 jYgNJX Sizeweb__Size-t4oux4-0 fitCCE Spaceweb__Space-sc-1gh69p2-0 elJMNa Flexweb__Flex-h5ddrw-0 cndXnK"
                data-testid="ds-text-area"
                placeholder=""
                rows="1"
                style="height: 0px;"
                type="text"
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1i53gcl-0 Lineweb__Line-msfe36-0 dLqxdC"
          />
        </div>
        <div
          class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 kNGuEF"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 cndXnK Spaceweb__Space-sc-1gh69p2-0 cwrKW"
          >
            <div
              class="Textweb__Text-dvo2dp-0 jlzvmT"
              color="negative.900"
              data-testid="ds-text"
            >
              This is help text
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> errorText with maxLength should render TextArea with character count as fraction 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hrYFpH"
  >
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hHzdeI"
    >
      <div
        class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 fsyzhh"
      >
        <div
          class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InteractionContainer-th1lpa-3 jZIJQj"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 TextInputweb__FillContainer-th1lpa-2 gwRKpx Spaceweb__Space-sc-1gh69p2-0 gseDFa Sizeweb__Size-t4oux4-0 jMNahJ"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 Labelweb__FloatView-sc-164wi1o-0 fRrBNK Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
            >
              <label
                class="Textweb__Text-dvo2dp-0 Labelweb__StyledText-sc-164wi1o-1 fSAEiu"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="medium"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InputContainer-th1lpa-0 cXrEYp Sizeweb__Size-t4oux4-0 cTcGbL Flexweb__Flex-h5ddrw-0 bXkbdN"
            >
              <textarea
                class="TextInputweb__StyledInput-th1lpa-1 jYgNJX Sizeweb__Size-t4oux4-0 fitCCE Spaceweb__Space-sc-1gh69p2-0 elJMNa Flexweb__Flex-h5ddrw-0 cndXnK"
                data-testid="ds-text-area"
                maxlength="10"
                placeholder=""
                rows="1"
                style="height: 0px;"
                type="text"
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1i53gcl-0 Lineweb__Line-msfe36-0 dLqxdC"
          />
        </div>
        <div
          class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 kNGuEF"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 cndXnK Spaceweb__Space-sc-1gh69p2-0 cwrKW"
          >
            <div
              class="Textweb__Text-dvo2dp-0 jlzvmT"
              color="negative.900"
              data-testid="ds-text"
            >
              This is error text
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1i53gcl-0 iLSGsw Spaceweb__Space-sc-1gh69p2-0 geiqBC"
          >
            <div
              class="Textweb__Text-dvo2dp-0 cqcyer"
              color="shade.950"
              data-testid="ds-text"
            >
              0/10
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> focus should have focus when TextArea is focused 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hrYFpH"
  >
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hHzdeI"
    >
      <div
        class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 fsyzhh"
      >
        <div
          class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InteractionContainer-th1lpa-3 lgHHqS"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 TextInputweb__FillContainer-th1lpa-2 gwRKpx Spaceweb__Space-sc-1gh69p2-0 gseDFa Sizeweb__Size-t4oux4-0 jMNahJ"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 Labelweb__FloatView-sc-164wi1o-0 fRrBNK Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
              style="transform: translate(-NaNpx,-0px);"
            >
              <label
                class="Textweb__Text-dvo2dp-0 Labelweb__StyledText-sc-164wi1o-1 ekdIGf"
                color="shade.980"
                data-testid="ds-text"
                for="sample-id"
                value=""
                width="medium"
              >
                Sample Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InputContainer-th1lpa-0 cXrEYp Sizeweb__Size-t4oux4-0 cTcGbL Flexweb__Flex-h5ddrw-0 bXkbdN"
            >
              <textarea
                class="TextInputweb__StyledInput-th1lpa-1 jYgNJX Sizeweb__Size-t4oux4-0 fitCCE Spaceweb__Space-sc-1gh69p2-0 elJMNa Flexweb__Flex-h5ddrw-0 cndXnK"
                data-testid="ds-text-area"
                id="sample-id"
                placeholder=""
                rows="1"
                style="height: 0px;"
                type="text"
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1i53gcl-0 Lineweb__Line-msfe36-0 dLqxdC"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> helpText should render TextArea with help text if helpText is provided as prop 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hrYFpH"
  >
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hHzdeI"
    >
      <div
        class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 fsyzhh"
      >
        <div
          class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InteractionContainer-th1lpa-3 lgHHqS"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 TextInputweb__FillContainer-th1lpa-2 gwRKpx Spaceweb__Space-sc-1gh69p2-0 gseDFa Sizeweb__Size-t4oux4-0 jMNahJ"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 Labelweb__FloatView-sc-164wi1o-0 fRrBNK Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
            >
              <label
                class="Textweb__Text-dvo2dp-0 Labelweb__StyledText-sc-164wi1o-1 fSAEiu"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="medium"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InputContainer-th1lpa-0 cXrEYp Sizeweb__Size-t4oux4-0 cTcGbL Flexweb__Flex-h5ddrw-0 bXkbdN"
            >
              <textarea
                class="TextInputweb__StyledInput-th1lpa-1 jYgNJX Sizeweb__Size-t4oux4-0 fitCCE Spaceweb__Space-sc-1gh69p2-0 elJMNa Flexweb__Flex-h5ddrw-0 cndXnK"
                data-testid="ds-text-area"
                placeholder=""
                rows="1"
                style="height: 0px;"
                type="text"
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1i53gcl-0 Lineweb__Line-msfe36-0 dLqxdC"
          />
        </div>
        <div
          class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 kNGuEF"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 cndXnK Spaceweb__Space-sc-1gh69p2-0 cwrKW"
          >
            <div
              class="Textweb__Text-dvo2dp-0 cqcyer"
              color="shade.950"
              data-testid="ds-text"
            >
              This is help text
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> helpText with maxLength should render TextArea with character count as fraction 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hrYFpH"
  >
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hHzdeI"
    >
      <div
        class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 fsyzhh"
      >
        <div
          class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InteractionContainer-th1lpa-3 lgHHqS"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 TextInputweb__FillContainer-th1lpa-2 gwRKpx Spaceweb__Space-sc-1gh69p2-0 gseDFa Sizeweb__Size-t4oux4-0 jMNahJ"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 Labelweb__FloatView-sc-164wi1o-0 fRrBNK Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
            >
              <label
                class="Textweb__Text-dvo2dp-0 Labelweb__StyledText-sc-164wi1o-1 fSAEiu"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="medium"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InputContainer-th1lpa-0 cXrEYp Sizeweb__Size-t4oux4-0 cTcGbL Flexweb__Flex-h5ddrw-0 bXkbdN"
            >
              <textarea
                class="TextInputweb__StyledInput-th1lpa-1 jYgNJX Sizeweb__Size-t4oux4-0 fitCCE Spaceweb__Space-sc-1gh69p2-0 elJMNa Flexweb__Flex-h5ddrw-0 cndXnK"
                data-testid="ds-text-area"
                maxlength="10"
                placeholder=""
                rows="1"
                style="height: 0px;"
                type="text"
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1i53gcl-0 Lineweb__Line-msfe36-0 dLqxdC"
          />
        </div>
        <div
          class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 kNGuEF"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 cndXnK Spaceweb__Space-sc-1gh69p2-0 cwrKW"
          >
            <div
              class="Textweb__Text-dvo2dp-0 cqcyer"
              color="shade.950"
              data-testid="ds-text"
            >
              This is help text
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1i53gcl-0 iLSGsw Spaceweb__Space-sc-1gh69p2-0 geiqBC"
          >
            <div
              class="Textweb__Text-dvo2dp-0 cqcyer"
              color="shade.950"
              data-testid="ds-text"
            >
              0/10
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> label should render a TextArea with labelPosition on left and variant filled 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hrYFpH"
  >
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hHzdeI"
    >
      <label
        class="Textweb__Text-dvo2dp-0 Labelweb__StyledText-sc-164wi1o-1 fSAEiu Spaceweb__Space-sc-1gh69p2-0 fokNlH"
        color="shade.980"
        data-testid="ds-text"
        for="sample-id"
        id="sample-id"
        value=""
        width="medium"
      >
        Sample Label
      </label>
      <div
        class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 fsyzhh"
      >
        <div
          class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InteractionContainer-th1lpa-3 lgHHqS"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 TextInputweb__FillContainer-th1lpa-2 hbxknE Spaceweb__Space-sc-1gh69p2-0 cAeDYC Sizeweb__Size-t4oux4-0 ltsBU"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InputContainer-th1lpa-0 cXrEYp Sizeweb__Size-t4oux4-0 cTcGbL Flexweb__Flex-h5ddrw-0 bXkbdN"
            >
              <textarea
                class="TextInputweb__StyledInput-th1lpa-1 cQyOdz Sizeweb__Size-t4oux4-0 fitCCE Spaceweb__Space-sc-1gh69p2-0 iBpGMC Flexweb__Flex-h5ddrw-0 cndXnK"
                data-testid="ds-text-area"
                id="sample-id"
                placeholder=""
                rows="3"
                type="text"
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1i53gcl-0 Lineweb__Line-msfe36-0 dLqxdC"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> label should render a TextArea with labelPosition on top(default) and variant filled 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hrYFpH"
  >
    <label
      class="Textweb__Text-dvo2dp-0 Labelweb__StyledText-sc-164wi1o-1 jUzJRT Spaceweb__Space-sc-1gh69p2-0 dqSztZ"
      color="shade.980"
      data-testid="ds-text"
      for="sample-id"
      id="sample-id"
      value=""
      width="medium"
    >
      Sample Label
    </label>
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hHzdeI"
    >
      <div
        class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 fsyzhh"
      >
        <div
          class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InteractionContainer-th1lpa-3 lgHHqS"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 TextInputweb__FillContainer-th1lpa-2 hbxknE Spaceweb__Space-sc-1gh69p2-0 cAeDYC Sizeweb__Size-t4oux4-0 ltsBU"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InputContainer-th1lpa-0 cXrEYp Sizeweb__Size-t4oux4-0 cTcGbL Flexweb__Flex-h5ddrw-0 bXkbdN"
            >
              <textarea
                class="TextInputweb__StyledInput-th1lpa-1 cQyOdz Sizeweb__Size-t4oux4-0 fitCCE Spaceweb__Space-sc-1gh69p2-0 iBpGMC Flexweb__Flex-h5ddrw-0 cndXnK"
                data-testid="ds-text-area"
                id="sample-id"
                placeholder=""
                rows="3"
                type="text"
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1i53gcl-0 Lineweb__Line-msfe36-0 dLqxdC"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> label should render a TextArea with labelPosition on top(default) and variant outlined(default) 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hrYFpH"
  >
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hHzdeI"
    >
      <div
        class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 fsyzhh"
      >
        <div
          class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InteractionContainer-th1lpa-3 lgHHqS"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 TextInputweb__FillContainer-th1lpa-2 gwRKpx Spaceweb__Space-sc-1gh69p2-0 gseDFa Sizeweb__Size-t4oux4-0 jMNahJ"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 Labelweb__FloatView-sc-164wi1o-0 fRrBNK Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
            >
              <label
                class="Textweb__Text-dvo2dp-0 Labelweb__StyledText-sc-164wi1o-1 fSAEiu"
                color="shade.980"
                data-testid="ds-text"
                for="sample-id"
                value=""
                width="medium"
              >
                Sample Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InputContainer-th1lpa-0 cXrEYp Sizeweb__Size-t4oux4-0 cTcGbL Flexweb__Flex-h5ddrw-0 bXkbdN"
            >
              <textarea
                class="TextInputweb__StyledInput-th1lpa-1 jYgNJX Sizeweb__Size-t4oux4-0 fitCCE Spaceweb__Space-sc-1gh69p2-0 elJMNa Flexweb__Flex-h5ddrw-0 cndXnK"
                data-testid="ds-text-area"
                id="sample-id"
                placeholder=""
                rows="1"
                style="height: 0px;"
                type="text"
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1i53gcl-0 Lineweb__Line-msfe36-0 dLqxdC"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> variant should render filled variant with default props 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hrYFpH"
  >
    <label
      class="Textweb__Text-dvo2dp-0 Labelweb__StyledText-sc-164wi1o-1 jUzJRT Spaceweb__Space-sc-1gh69p2-0 dqSztZ"
      color="shade.980"
      data-testid="ds-text"
      value=""
      width="medium"
    >
      Label
    </label>
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hHzdeI"
    >
      <div
        class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 fsyzhh"
      >
        <div
          class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InteractionContainer-th1lpa-3 lgHHqS"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 TextInputweb__FillContainer-th1lpa-2 hbxknE Spaceweb__Space-sc-1gh69p2-0 cAeDYC Sizeweb__Size-t4oux4-0 ltsBU"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InputContainer-th1lpa-0 cXrEYp Sizeweb__Size-t4oux4-0 cTcGbL Flexweb__Flex-h5ddrw-0 bXkbdN"
            >
              <textarea
                class="TextInputweb__StyledInput-th1lpa-1 cQyOdz Sizeweb__Size-t4oux4-0 fitCCE Spaceweb__Space-sc-1gh69p2-0 iBpGMC Flexweb__Flex-h5ddrw-0 cndXnK"
                data-testid="ds-text-area"
                placeholder=""
                rows="3"
                type="text"
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1i53gcl-0 Lineweb__Line-msfe36-0 dLqxdC"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> variant should render outlined variant with default props 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hrYFpH"
  >
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hHzdeI"
    >
      <div
        class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 fsyzhh"
      >
        <div
          class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InteractionContainer-th1lpa-3 lgHHqS"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 TextInputweb__FillContainer-th1lpa-2 gwRKpx Spaceweb__Space-sc-1gh69p2-0 gseDFa Sizeweb__Size-t4oux4-0 jMNahJ"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 Labelweb__FloatView-sc-164wi1o-0 fRrBNK Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
            >
              <label
                class="Textweb__Text-dvo2dp-0 Labelweb__StyledText-sc-164wi1o-1 fSAEiu"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="medium"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InputContainer-th1lpa-0 cXrEYp Sizeweb__Size-t4oux4-0 cTcGbL Flexweb__Flex-h5ddrw-0 bXkbdN"
            >
              <textarea
                class="TextInputweb__StyledInput-th1lpa-1 jYgNJX Sizeweb__Size-t4oux4-0 fitCCE Spaceweb__Space-sc-1gh69p2-0 elJMNa Flexweb__Flex-h5ddrw-0 cndXnK"
                data-testid="ds-text-area"
                placeholder=""
                rows="1"
                style="height: 0px;"
                type="text"
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1i53gcl-0 Lineweb__Line-msfe36-0 dLqxdC"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> width should render a TextArea with auto width 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hrYFpH"
  >
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hHzdeI"
    >
      <div
        class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 laciwS"
      >
        <div
          class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InteractionContainer-th1lpa-3 lgHHqS"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 TextInputweb__FillContainer-th1lpa-2 gwRKpx Spaceweb__Space-sc-1gh69p2-0 gseDFa Sizeweb__Size-t4oux4-0 jMNahJ"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 Labelweb__FloatView-sc-164wi1o-0 fRrBNK Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
            >
              <label
                class="Textweb__Text-dvo2dp-0 Labelweb__StyledText-sc-164wi1o-1 fSAEiu"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="auto"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InputContainer-th1lpa-0 cXrEYp Sizeweb__Size-t4oux4-0 hHYXCZ Flexweb__Flex-h5ddrw-0 bXkbdN"
            >
              <textarea
                class="TextInputweb__StyledInput-th1lpa-1 jYgNJX Sizeweb__Size-t4oux4-0 fitCCE Spaceweb__Space-sc-1gh69p2-0 elJMNa Flexweb__Flex-h5ddrw-0 cndXnK"
                data-testid="ds-text-area"
                placeholder=""
                rows="1"
                style="height: 0px;"
                type="text"
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1i53gcl-0 Lineweb__Line-msfe36-0 dLqxdC"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> width should render a TextArea with medium(default) width 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hrYFpH"
  >
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hHzdeI"
    >
      <div
        class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 fsyzhh"
      >
        <div
          class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InteractionContainer-th1lpa-3 lgHHqS"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 TextInputweb__FillContainer-th1lpa-2 gwRKpx Spaceweb__Space-sc-1gh69p2-0 gseDFa Sizeweb__Size-t4oux4-0 jMNahJ"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 Labelweb__FloatView-sc-164wi1o-0 fRrBNK Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
            >
              <label
                class="Textweb__Text-dvo2dp-0 Labelweb__StyledText-sc-164wi1o-1 fSAEiu"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="medium"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InputContainer-th1lpa-0 cXrEYp Sizeweb__Size-t4oux4-0 cTcGbL Flexweb__Flex-h5ddrw-0 bXkbdN"
            >
              <textarea
                class="TextInputweb__StyledInput-th1lpa-1 jYgNJX Sizeweb__Size-t4oux4-0 fitCCE Spaceweb__Space-sc-1gh69p2-0 elJMNa Flexweb__Flex-h5ddrw-0 cndXnK"
                data-testid="ds-text-area"
                placeholder=""
                rows="1"
                style="height: 0px;"
                type="text"
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1i53gcl-0 Lineweb__Line-msfe36-0 dLqxdC"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> width should render a TextArea with small width 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hrYFpH"
  >
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hHzdeI"
    >
      <div
        class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 fsyzhh"
      >
        <div
          class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InteractionContainer-th1lpa-3 lgHHqS"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 TextInputweb__FillContainer-th1lpa-2 gwRKpx Spaceweb__Space-sc-1gh69p2-0 gseDFa Sizeweb__Size-t4oux4-0 jMNahJ"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 Labelweb__FloatView-sc-164wi1o-0 fRrBNK Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
            >
              <label
                class="Textweb__Text-dvo2dp-0 Labelweb__StyledText-sc-164wi1o-1 fSAEiu"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="small"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InputContainer-th1lpa-0 cXrEYp Sizeweb__Size-t4oux4-0 dCQgNm Flexweb__Flex-h5ddrw-0 bXkbdN"
            >
              <textarea
                class="TextInputweb__StyledInput-th1lpa-1 jYgNJX Sizeweb__Size-t4oux4-0 fitCCE Spaceweb__Space-sc-1gh69p2-0 elJMNa Flexweb__Flex-h5ddrw-0 cndXnK"
                data-testid="ds-text-area"
                placeholder=""
                rows="1"
                style="height: 0px;"
                type="text"
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1i53gcl-0 Lineweb__Line-msfe36-0 dLqxdC"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
